Global Font chaged and some animation is improved

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,8 +3,6 @@
 @import "lenis/dist/lenis.css";
 @custom-variant dark (&:is(.dark *));
 
-
-
 .scrollbar-hidden::-webkit-scrollbar {
   display: none;
 }
@@ -95,6 +93,27 @@
   100% {
     background-position: bottom center;
     }
+  }
+  --animate-shimmer-slide: shimmer-slide var(--speed) ease-in-out infinite alternate;
+  --animate-spin-around: spin-around calc(var(--speed) * 2) infinite linear;
+  @keyframes shimmer-slide {
+  to {
+    transform: translate(calc(100cqw - 100%), 0);
+    }
+  }
+  @keyframes spin-around {
+  0% {
+    transform: translateZ(0) rotate(0);
+    }
+  15%, 35% {
+    transform: translateZ(0) rotate(90deg);
+    }
+  65%, 85% {
+    transform: translateZ(0) rotate(270deg);
+    }
+  100% {
+    transform: translateZ(0) rotate(360deg);
+    }
   }}
 
   :root {
@@ -131,7 +150,7 @@
     --sidebar-border: oklch(0.92 0.004 286.32);
     --sidebar-ring: oklch(0.705 0.015 286.067);
   }
-  
+
   .dark {
     --background: oklch(0.141 0.005 285.823);
     --foreground: oklch(0.985 0 0);
@@ -165,7 +184,6 @@
     --sidebar-border: oklch(1 0 0 / 10%);
     --sidebar-ring: oklch(0.552 0.016 285.938);
   }
-  
 
 @layer base {
   * {
